# Houdini-Toolbox

./: README.md  package.py  pyproject.toml
docs/: README.md  architecture.md  development.md  features.md  installation.md
houdini/python3.11libs/: nodegraphhooks.py
icons/: CMakeLists.txt
python/houdini_toolbox/ui/: nodegraph.py  qt.py
python/houdini_toolbox/ui/aovs/: dialogs.py  models.py  utils.py  widgets.py
python/houdini_toolbox/ui/paste/: dialogs.py  helpers.py  models.py  sources.py  widgets.py
tests/compat/: test_houdini_python_libs.py  test_nodegraph_key_prompt.py  test_package_metadata.py  test_qt.py
tests/python/ui/: test_nodegraph.py  test_nodegraphhooks.py
